# Header files need not be enumerated
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_BINARY_DIR})

###########
# LIB ER #
###########

# Install header files
LIST(APPEND liber_install_headers
	er.h
)
INSTALL(FILES ${liber_install_headers} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

LIST(APPEND liber_srcs
    er.c
    er_util.c
)

# ER Library
ADD_LIBRARY(er_o OBJECT ${liber_srcs})

IF(BUILD_SHARED_LIBS)
   ADD_LIBRARY(er SHARED $<TARGET_OBJECTS:er_o>)
   TARGET_LINK_LIBRARIES(er ${ER_EXTERNAL_LIBS})
   SET_TARGET_PROPERTIES(er PROPERTIES OUTPUT_NAME er CLEAN_DIRECT_OUTPUT 1)
   INSTALL(TARGETS er DESTINATION ${CMAKE_INSTALL_LIBDIR})
ENDIF()

ADD_LIBRARY(er-static STATIC $<TARGET_OBJECTS:er_o>)
IF(ER_LINK_STATIC)
        SET_TARGET_PROPERTIES(er-static PROPERTIES LINK_SEARCH_START_STATIC 1)
        SET_TARGET_PROPERTIES(er-static PROPERTIES LINK_SEARCH_END_STATIC 1)
ENDIF(ER_LINK_STATIC)
TARGET_LINK_LIBRARIES(er-static ${ER_EXTERNAL_LIBS})

SET_TARGET_PROPERTIES(er-static PROPERTIES OUTPUT_NAME er CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS er-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
